--- a/angular.json
+++ b/angular.json
@@ -2,5 +2,42 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
-  "projects": {}
+  "projects": {
+    "angular-icalendar": {
+      "root": "projects/angular-icalendar",
+      "sourceRoot": "projects/angular-icalendar/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/angular-icalendar/tsconfig.lib.json",
+            "project": "projects/angular-icalendar/ng-package.json"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/angular-icalendar/src/test.ts",
+            "tsConfig": "projects/angular-icalendar/tsconfig.spec.json",
+            "karmaConfig": "projects/angular-icalendar/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/angular-icalendar/tsconfig.lib.json",
+              "projects/angular-icalendar/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "angular-icalendar"
 }
