--- a/projects/angular-icalendar/package.json
+++ b/projects/angular-icalendar/package.json
@@ -1,10 +1,8 @@
 {
   "name": "angular-icalendar",
-  "version": "0.0.4",
+  "version": "0.0.6",
   "peerDependencies": {
-    "icalendar": "^0.7.1",
     "moment": "^2.24.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
