--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
     "tslib": "^1.9.0",
     "tslint": "~5.11.0",
     "typescript": "~3.2.2"
+  },
+  "engines": {
+    "node": "12.16.1",
+    "npm": "6.4.1"
   }
 }
